--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 	gradio==3.39.0
-	sentence-transformers==2.2.2
-	together==0.2.10
-	python-dotenv==1.0.1
-	pyspellchecker==0.8.3
-	requests==2.31.0
-	torch>=1.12.1
-	pydub 
+sentence-transformers==2.2.2
+huggingface_hub==0.15.1          
+together==0.2.10
+python-dotenv==1.0.1
+pyspellchecker==0.8.3
+requests==2.31.0
+torch>=1.12.1
+pydub
