--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-	gradio==3.39.0
-sentence-transformers==2.2.2
-huggingface_hub==0.15.1          	
-together==0.2.7
-python-dotenv==1.0.1
-pyspellchecker==0.8.3
-requests==2.31.0
-torch>=1.12.1
-pydub
+gradio>=3.35
+sentence-transformers>=2.2.2
+python-dotenv>=1.0.0
+pyspellchecker>=0.6.2
+togetherai>=0.2.0
+requests>=2.28.0
+torch>=2.0.0
