--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ gradio>=3.35
 sentence-transformers>=2.2.2
 python-dotenv>=1.0.0
 pyspellchecker>=0.6.2
-togetherai>=0.2.0
+together
 requests>=2.28.0
 torch>=2.0.0
